# thunder_dynamics

./: .gitignore  LICENSE  README.md  road_to_pytorch.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  setup_bin.sh  setup_init.sh
docs/: README.md  configuration.md  cpp_usage.md  customization.md  getting_started.md  installation.md  python_usage.md
robots/RRR_sea/: seaRRR.yaml
robots/franka/: franka.yaml  franka_inertial.yaml  franka_inertial_REG.yaml
src/: todo.todo
src/chrono_test/: main_Chrono.cpp  makefile
src/chrono_test/src/: ThunderPanda.cpp  ThunderPandaClassic.cpp
src/genYAML/: main_YAML.cpp
src/genYAML/src/: urdf2dh_inertial.cpp
src/thunder/: CMakeLists.txt  main_Thunder_test.cpp  thunder.cpp  thunder_benchmark.cpp  thunder_main.cpp  thunder_test.cpp  thunder_test_chrono.cpp
src/thunder/robots/RRR/: RRR.yaml
src/thunder/robots/RRR_sea/: seaRRR.yaml
src/thunder/robots/bifrank/: lewis.yaml  richard.yaml
src/thunder/robots/ego/: egoRightArm.yaml  ego_arm.yaml
src/thunder/robots/franka/: franka.yaml  inertial_DH_REG_ok_adaptiveThrow.yaml
src/thunder/robots/frankaWrist/: frankaWrist.yaml
src/thunder/robots/robot/: robot.yaml  robot_inertial_REG.yaml
src/thunder/robots/testRobots/: R15.yaml  R3.yaml  R30.yaml  R5.yaml  R7.yaml  R9.yaml  R9_kinSymb.yaml  R9_noDynSymb.yaml
src/thunder/src/: DHConfigLoader.cpp  FrameOffset.cpp  RobDyn.cpp  RobKinAdv.cpp  RobKinBasic.cpp  RobReg.cpp  RobReg_Classic.cpp  URDFConfigLoader.cpp  control.cpp  dynamics.cpp  genYaml.cpp  kinematics.cpp  regressors.cpp  robot.cpp  urdf2dh_inertial.cpp  userDefined.cpp  utils.cpp
src/thunder/thunder_robot_template/: CMakeLists.txt  thunder_robot.cpp  thunder_robot.h
src/thunder_control/: CMakeLists.txt  thunder_control_test.cpp  todo.todo
src/thunder_control/control_h/: thunder_control.h
src/thunder_control/control_header/: thunder_control.h
src/thunder_control/scripts/: generate_solver.py
src/thunder_robot/: CMakeLists.txt  thunder_robot_test.cpp
src/thunder_robot/backup/: thunder_robot.cpp  thunder_robot.h
src/thunder_robot/control_cpp/: thunder_control.cpp
src/thunder_robot/control_h/: thunder_control.h
src/thunder_robot/robots/: R5_inertial_REG.yaml  R7_inertial_DYN.yaml  R9_inertial_DYN.yaml  R9_inertial_REG.yaml  seaRRR_inertial_REG.yaml
src/thunder_robot/robots/robot/: robot_inertial_DYN.yaml  robot_inertial_REG.yaml  saved_inertial_REG.yaml  saved_robot_inertial_REG.yaml
src/thunder_robot/src/: thunder_RRR.cpp  thunder_robot.cpp  thunder_seaRRR.cpp
src/thunder_robot_chrono/: CMakeLists.txt  thunder_robot_test_chrono.cpp
src/thunder_robot_chrono/not_to_build/: thunder_R3.cpp  thunder_R3.h  thunder_R5.cpp  thunder_R5.h  thunder_R7.cpp  thunder_R7.h
src/thunder_robot_chrono/robots/: R5_inertial_DYN.yaml  R7_inertial_REG.yaml
src/thunder_robot_chrono/robots/RRR/: RRR_inertial_REG.yaml
src/thunder_robot_chrono/src/: thunder_R9.cpp
src/thunder_torch/: cusadiops.py  test.py  thunder_robot.py  thunder_torch_gen.py
